--- a/lib/components/fo_gdpr_form/fo_gdpr_form_component.html
+++ b/lib/components/fo_gdpr_form/fo_gdpr_form_component.html
@@ -7,48 +7,48 @@
                     <form [ngFormModel]="form">
                         <div class="row">
                             <div class="col">
-                                <p class="margin-top-none margin-bottom-small text-small" [innerHtml]="'gdpr_form_info' | phrase"></p>
+                                <p class="margin-top-none margin-bottom-small text-small" [innerHtml]="msg.gdpr_form_info()"></p>
                                 <p class="margin-top-small text-small" *ngIf="readMoreLink != null">
-                                    <a href="{{readMoreLink}}" target="_blank">{{'read_more' | phrase}}</a>
+                                    <a href="{{readMoreLink}}" target="_blank">{{msg.read_more()}}</a>
                                 </p> 
                             </div>
                         </div>
                         <div class="row">
                             <div class="m6 col">
-                                <material-input label="{{'firstname' | phrase}}*" floatingLabel ngControl="firstname" [(ngModel)]="model.firstname" [maxCount]="50">
+                                <material-input label="{{msg.firstname()}}*" floatingLabel ngControl="firstname" [(ngModel)]="model.firstname" [maxCount]="50">
                                 </material-input>
                             </div>
                             <div class="m6 col">
-                                <material-input label="{{'lastname' | phrase}}*" floatingLabel ngControl="lastname" [(ngModel)]="model.lastname" [maxCount]="50">
-                                </material-input>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="m6 col">
-                                <material-input label="{{'phone' | phrase}}*" floatingLabel ngControl="phone" [(ngModel)]="model.phone" [maxCount]="15">
-                                </material-input>
-                            </div>
-                            <div class="m6 col">
-                                <material-input label="{{'email' | phrase}}*" floatingLabel ngControl="email" [(ngModel)]="model.email" [maxCount]="128">
+                                <material-input label="{{msg.lastname()}}*" floatingLabel ngControl="lastname" [(ngModel)]="model.lastname" [maxCount]="50">
                                 </material-input>
                             </div>
                         </div>
                         <div class="row">
                             <div class="m6 col">
-                                <fo-select label="{{'issue' | phrase}}*" [sort]="false" [(selectedId)]="model.selected_issue" [options]="options">
+                                <material-input label="{{msg.phone()}}*" floatingLabel ngControl="phone" [(ngModel)]="model.phone" [maxCount]="15">
+                                </material-input>
+                            </div>
+                            <div class="m6 col">
+                                <material-input label="{{msg.email()}}*" floatingLabel ngControl="email" [(ngModel)]="model.email" [maxCount]="128">
+                                </material-input>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="m6 col">
+                                <fo-select label="{{msg.issue()}}*" [sort]="false" [(selectedId)]="model.selected_issue" [options]="options">
                                 </fo-select>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col">
-                                <material-input label="{{'comments' | phrase}}" floatingLabel ngControl="comments" [(ngModel)]="model.comments" [maxCount]="1000"
+                                <material-input [label]="msg.comment(2)" floatingLabel ngControl="comments" [(ngModel)]="model.comments" [maxCount]="1000"
                                     multiline rows="5">
                                 </material-input>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col text-right">
-                                <material-checkbox label="{{'gdpr_form_accept' | phrase}}" [(checked)]="termsChecked">
+                                <material-checkbox [label]="msg.gdpr_form_accept()" [(checked)]="termsChecked">
                                 </material-checkbox>
                             </div>
                         </div>
@@ -59,13 +59,13 @@
             <div class="row" footer>
                 <div class="col text-right">
                     <material-button raised (trigger)="submit()" [disabled]="!form.valid || !termsChecked">
-                        {{'send' | phrase}}
+                        {{msg.send()}}
                     </material-button>
                 </div>
             </div>
         </div>
         <div *ngIf="sent">
-            <p [innerHtml]="'gdpr_form_completed_message' | phrase"></p>
+            <p [innerHtml]="msg.gdpr_form_completed_message()"></p>
         </div>
     </div>
 
