--- a/lib/components/fo_multi_input/fo_multi_input_component.html
+++ b/lib/components/fo_multi_input/fo_multi_input_component.html
@@ -1,6 +1,6 @@
 <div class="flex-container">
     <material-input
-            label="{{label | phrase}}" floatingLabel
+            [label]="label" floatingLabel
             [leadingText]="leadingText"
             [disabled]="disabled"
             [displayBottomPanel]="false"
