--- a/lib/components/fo_notification/fo_notification_component.html
+++ b/lib/components/fo_notification/fo_notification_component.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="l11 m10 s9 col">
                     <h3 class="overflowEllipsis margin-top-medium margin-bottom-none">
-                        {{header | phrase}}
+                        {{header}}
                     </h3>
                 </div>
                 <div class="l1 m2 s3 col text-right">
