--- a/lib/components/fo_time_input/fo_time_input_component.html
+++ b/lib/components/fo_time_input/fo_time_input_component.html
@@ -1,5 +1,5 @@
 <div class="labelContainer">
-    <label>{{label | phrase}}</label>
+    <label>{{label}}</label>
 </div>
 <div class="selectContainer">
     <fo-select
