--- a/lib/components/fo_data_table/fo_data_table_component.scss
+++ b/lib/components/fo_data_table/fo_data_table_component.scss
@@ -1,42 +1,33 @@
 @import 'package:grid/grid';
 @import 'package:grid/theme';
-
-:host
-{
-  width:100%;
-  material-icon
-  {
-    vertical-align: text-top;
-  }
+:host {
+    width: 100%;
+    /*
+    material-icon {
+        vertical-align: text-top;
+    }*/
 }
 
-fieldset
-{
-  border: 0;
-  padding: 0;
-  margin-bottom: 0.2em;
+fieldset {
+    border: 0;
+    padding: 0;
+    margin-bottom: 0.2em;
 }
 
-.faded
-{
-  opacity: 0.6;
+.faded {
+    opacity: 0.6;
 }
 
-
-material-input
-{
-  width: 100%;
+material-input {
+    width: 100%;
 }
 
-.clickable
-{
+.clickable {
     user-select: none;
     -webkit-user-select: none;
 }
 
-
-div.table-container
-{
+div.table-container {
     position: relative;
     z-index: 1;
     min-width: 285px;
@@ -45,126 +36,89 @@ div.table-container
     -ms-user-select: none;
     user-select: none;
     background-color: white;
-
-    table.output
-    {
-      -webkit-transition: opacity 0.2s;
-      -moz-transition: opacity 0.2s;
-      -o-transition: opacity 0.2s;
-      transition: opacity 0.2s;
-      width: 100%;
-      border-collapse: collapse;
-      border:2px solid #eee;
-      font-size: 0.7rem;
-
-      td
-      {
-        padding: 0.5em 0.5em 0.5em 0;
-        white-space: nowrap;
-      }
-
-        td:first-child
-        {
+    table.output {
+        -webkit-transition: opacity 0.2s;
+        -moz-transition: opacity 0.2s;
+        -o-transition: opacity 0.2s;
+        transition: opacity 0.2s;
+        width: 100%;
+        border-collapse: collapse;
+        border: 2px solid #eee;
+        font-size: 0.8rem;
+        td {            
+            white-space: nowrap;
+        }
+        td:first-child {
             padding-left: 0.5em;
         }
-
-      thead
-      {
-        tr
-        {
-          background-color: #eee;
-          td
-          {
-            overflow: hidden;
-            text-overflow: ellipsis;
-            cursor: pointer;
-
-
-            span
-            {
-                font-size: 0.9rem;
-                font-stretch: ultra-condensed;
+        thead {
+            tr {
+                background-color: #eee;
+                td {
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                    cursor: pointer;
+                    line-height: 1rem;
+                    height: 1rem;
+                    span {
+                        font-size: 0.9rem;
+                        font-stretch: ultra-condensed;
+                    }
+                }
+                td.buttonCell {
+                    width: 1rem;
+                }
             }
-            span.underline
-            {
-                text-decoration: underline;
+            border-bottom: 2px solid #ddd;
+        }
+        tbody {
+            tr {
+                cursor: pointer;
+                td {
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                }
             }
-          }
-
-          td.buttonCell
-          {
-            width: 1rem;
-          }
+            tr:nth-child(even) {
+                background-color: #f5f5f5;
+            }
+            tr:nth-child(odd) {
+                background-color: #fff;
+            }
+            tr:hover {
+                background-color: #eee;
+            }
+            border-bottom: 1px solid #ddd;
         }
-        border-bottom: 2px solid #ddd;
-      }
-
-      tbody
-      {
-        tr
-        {
-          cursor: pointer;
-          td
-          {
-            overflow: hidden;
-            text-overflow: ellipsis;
-          }
-
-        }
-        tr:nth-child(even)
-        {
-          background-color: #f5f5f5;
-        }
-        tr:nth-child(odd)
-        {
-          background-color: #fff;
-        }
-        tr:hover
-        {
-          background-color: #eee;
-        }
-        border-bottom: 1px solid #ddd;
-      }
     }
-
-    table.output.fixed-layout
-    {
+    table.output.fixed-layout {
         table-layout: fixed;
     }
-
-    #select-step
-    {
-      margin-top: 0.2rem;
-      #rows-per-page
-      {
-        margin-top: 0.15rem;
-        margin-left: 0.2rem;
-      }
-
-      font-size: 0.9rem;
-      color: #888;
-
-      material-icon.disabled
-      {
-        opacity: 0.3;
-      }
+    #select-step {
+       // margin-top: 0.2rem;
+        #rows-per-page {
+            margin-top: 0.15rem;
+            margin-left: 0.2rem;
+        }
+        font-size: 0.9rem;
+        color: #888;
+        material-icon.disabled {
+            opacity: 0.3;
+        }
     }
 }
 
-div.batch-operations-container
-{
+div.batch-operations-container {
     -webkit-transition: margin 0.3s;
     -moz-transition: margin 0.3s;
     -o-transition: margin 0.3s;
     transition: margin 0.3s;
-
     background-color: white;
     padding: 0.5rem 1rem;
     z-index: 0;
     margin-top: -8rem;
 }
 
-div.batch-operations-container.expanded
-{
+div.batch-operations-container.expanded {
     margin-top: -0.5rem;
 }
