Made data-table label use namepipe

--- a/lib/components/fo_data_table/fo_data_table_component.html
+++ b/lib/components/fo_data_table/fo_data_table_component.html
@@ -1,7 +1,7 @@
 <div class="row expand">
     <div class="s12 m7 l8 col">
         <h3 class="color-black margin-bottom-none">
-            {{label}}
+            {{label | name}}
             <material-icon baseline
                            size="large"
                            *ngIf="description != null"
