--- a/lib/components/fo_data_table/fo_data_table_component.html
+++ b/lib/components/fo_data_table/fo_data_table_component.html
@@ -24,111 +24,113 @@
 </div>
 
 <div class="table-container box-shadow">
-    <table [class.faded]="disabled"
-           class="output color-black margin-bottom-x-small">
-        <thead>
-            <tr>
-                <td *ngIf="showCheckboxes">
-                    <material-checkbox [(checked)]="allChecked"></material-checkbox>
-                </td>
-                <td *ngIf="errorFunction != null"></td>
-                <td *ngFor="let cell of columns.keys"
-                    [class.hide-for-small]="smallHiddenCol.contains(cell)"
-                    [class.hide-for-medium]="mediumHiddenCol.contains(cell)"
-                    [class.hide-for-large]="largeHiddenCol.contains(cell)"
-                    (click)="onSort(cell)">
-                    <span>{{columns[cell]}}</span>
-                    <material-icon baseline
-                                   size="small"
-                                   [class.hidden]="sortColumn != cell || sortOrder == 'DESC'"
-                                   icon="keyboard_arrow_up"></material-icon>
-                    <material-icon baseline
-                                   size="small"
-                                   [class.hidden]="sortColumn != cell || sortOrder == 'ASC'"
-                                   icon="keyboard_arrow_down"></material-icon>                                
-                </td>
-                <td *ngFor="let cell of evaluatedColumns.keys"
-                    [class.hide-for-small]="smallHiddenCol.contains(cell)"
-                    [class.hide-for-medium]="mediumHiddenCol.contains(cell)"
-                    [class.hide-for-large]="largeHiddenCol.contains(cell)"
-                    (click)="onSort(cell)">
-                    <span>{{cell}}</span>
-                    <material-icon baseline
-                                   size="small"
-                                   [class.hidden]="sortColumn != cell || sortOrder == 'DESC'"
-                                   icon="keyboard_arrow_up"></material-icon>
-                    <material-icon baseline
-                                   size="small"
-                                   [class.hidden]="sortColumn != cell || sortOrder == 'ASC'"
-                                   icon="keyboard_arrow_down"></material-icon>
-                </td>
-                <td *ngFor="let cell of asyncEvaluatedColumns.keys"
-                    [class.hide-for-small]="smallHiddenCol.contains(cell)"
-                    [class.hide-for-medium]="mediumHiddenCol.contains(cell)"
-                    [class.hide-for-large]="largeHiddenCol.contains(cell)"
-                    (click)="onSort(cell)">
-                    <span>{{cell}}</span>
-                    <material-icon baseline
-                                   size="small"
-                                   [class.hidden]="sortColumn != cell || sortOrder == 'DESC'"
-                                   icon="keyboard_arrow_up"></material-icon>
-                    <material-icon baseline
-                                   size="small"
-                                   [class.hidden]="sortColumn != cell || sortOrder == 'ASC'"
-                                   icon="keyboard_arrow_down"></material-icon>
-                </td>
-                <td *ngIf="showDeleteButtons"
-                    class="buttonCell"></td>
-            </tr>
-        </thead>
-        <tbody *ngIf="filteredKeys.isNotEmpty">
-            <tr *ngFor="let key of filteredKeys | range:firstIndex:lastIndex"
-                (click)="onRowClickController.add(key)">
-                <td *ngIf="showCheckboxes && data != null">
-                    <material-checkbox [disabled]="errorFunction != null && errorFunction(data[key]) != null"
-                                       [checked]="selectedRows.contains(key)"
-                                       (checkedChange)="onCheckedChange(key, $event)"
-                                       (click)="$event.stopPropagation()">
-                    </material-checkbox>
-                </td>
-                <td *ngIf="errorFunction != null && data != null">
-                    <material-icon *ngIf="errorFunction(data[key]) != null"
-                                   icon="warning"
-                                   size="medium"></material-icon>
-                </td>
-                <td *ngFor="let cell of columns.keys"
-                    [class.hide-for-small]="smallHiddenCol.contains(cell)"
-                    [class.hide-for-medium]="mediumHiddenCol.contains(cell)"
-                    [class.hide-for-large]="largeHiddenCol.contains(cell)">
-                    <span *ngIf="!isBool(getCell(key, cell))">{{getCell(key, cell)}}</span>
-                    <material-icon *ngIf="getCell(key, cell) == true"
-                                   baseline
-                                   icon="check"
-                                   size="x-small">
-                    </material-icon>
-                </td>
-                <td *ngFor="let cell of allEvaluatedColumns"
-                    [class.hide-for-small]="smallHiddenCol.contains(cell)"
-                    [class.hide-for-medium]="mediumHiddenCol.contains(cell)"
-                    [class.hide-for-large]="largeHiddenCol.contains(cell)">
-                    <span *ngIf="!isBool(getEvaluatedColumn(key, cell))">{{getEvaluatedColumn(key, cell)}}</span>
-                    <material-icon *ngIf="getEvaluatedColumn(key, cell) == true"
-                                   baseline
-                                   icon="check"
-                                   size="medium">
-                    </material-icon>
-                </td>
-                <td *ngIf="showDeleteButtons"
-                    class="text-center">
-                    <material-icon class="clickable color-alert"
-                                   icon="delete_forever"
-                                   size="x-large"
-                                   (click)="deleteBufferId = key; $event.stopPropagation()">
-                    </material-icon>
-                </td>
-            </tr>
-        </tbody>
-    </table>
+    <div class="output-container">
+        <table [class.faded]="disabled"
+               class="output color-black margin-bottom-x-small">
+            <thead>
+                <tr>
+                    <td *ngIf="showCheckboxes">
+                        <material-checkbox [(checked)]="allChecked"></material-checkbox>
+                    </td>
+                    <td *ngIf="errorFunction != null"></td>
+                    <td *ngFor="let cell of columns.keys"
+                        [class.hide-for-small]="smallHiddenCol.contains(cell)"
+                        [class.hide-for-medium]="mediumHiddenCol.contains(cell)"
+                        [class.hide-for-large]="largeHiddenCol.contains(cell)"
+                        (click)="onSort(cell)">
+                        <span>{{columns[cell]}}</span>
+                        <material-icon baseline
+                                       size="small"
+                                       [class.hidden]="sortColumn != cell || sortOrder == 'DESC'"
+                                       icon="keyboard_arrow_up"></material-icon>
+                        <material-icon baseline
+                                       size="small"
+                                       [class.hidden]="sortColumn != cell || sortOrder == 'ASC'"
+                                       icon="keyboard_arrow_down"></material-icon>
+                    </td>
+                    <td *ngFor="let cell of evaluatedColumns.keys"
+                        [class.hide-for-small]="smallHiddenCol.contains(cell)"
+                        [class.hide-for-medium]="mediumHiddenCol.contains(cell)"
+                        [class.hide-for-large]="largeHiddenCol.contains(cell)"
+                        (click)="onSort(cell)">
+                        <span>{{cell}}</span>
+                        <material-icon baseline
+                                       size="small"
+                                       [class.hidden]="sortColumn != cell || sortOrder == 'DESC'"
+                                       icon="keyboard_arrow_up"></material-icon>
+                        <material-icon baseline
+                                       size="small"
+                                       [class.hidden]="sortColumn != cell || sortOrder == 'ASC'"
+                                       icon="keyboard_arrow_down"></material-icon>
+                    </td>
+                    <td *ngFor="let cell of asyncEvaluatedColumns.keys"
+                        [class.hide-for-small]="smallHiddenCol.contains(cell)"
+                        [class.hide-for-medium]="mediumHiddenCol.contains(cell)"
+                        [class.hide-for-large]="largeHiddenCol.contains(cell)"
+                        (click)="onSort(cell)">
+                        <span>{{cell}}</span>
+                        <material-icon baseline
+                                       size="small"
+                                       [class.hidden]="sortColumn != cell || sortOrder == 'DESC'"
+                                       icon="keyboard_arrow_up"></material-icon>
+                        <material-icon baseline
+                                       size="small"
+                                       [class.hidden]="sortColumn != cell || sortOrder == 'ASC'"
+                                       icon="keyboard_arrow_down"></material-icon>
+                    </td>
+                    <td *ngIf="showDeleteButtons"
+                        class="buttonCell"></td>
+                </tr>
+            </thead>
+            <tbody *ngIf="filteredKeys.isNotEmpty">
+                <tr *ngFor="let key of filteredKeys | range:firstIndex:lastIndex"
+                    (click)="onRowClickController.add(key)">
+                    <td *ngIf="showCheckboxes && data != null">
+                        <material-checkbox [disabled]="errorFunction != null && errorFunction(data[key]) != null"
+                                           [checked]="selectedRows.contains(key)"
+                                           (checkedChange)="onCheckedChange(key, $event)"
+                                           (click)="$event.stopPropagation()">
+                        </material-checkbox>
+                    </td>
+                    <td *ngIf="errorFunction != null && data != null">
+                        <material-icon *ngIf="errorFunction(data[key]) != null"
+                                       icon="warning"
+                                       size="medium"></material-icon>
+                    </td>
+                    <td *ngFor="let cell of columns.keys"
+                        [class.hide-for-small]="smallHiddenCol.contains(cell)"
+                        [class.hide-for-medium]="mediumHiddenCol.contains(cell)"
+                        [class.hide-for-large]="largeHiddenCol.contains(cell)">
+                        <span *ngIf="!isBool(getCell(key, cell))">{{getCell(key, cell)}}</span>
+                        <material-icon *ngIf="getCell(key, cell) == true"
+                                       baseline
+                                       icon="check"
+                                       size="x-small">
+                        </material-icon>
+                    </td>
+                    <td *ngFor="let cell of allEvaluatedColumns"
+                        [class.hide-for-small]="smallHiddenCol.contains(cell)"
+                        [class.hide-for-medium]="mediumHiddenCol.contains(cell)"
+                        [class.hide-for-large]="largeHiddenCol.contains(cell)">
+                        <span *ngIf="!isBool(getEvaluatedColumn(key, cell))">{{getEvaluatedColumn(key, cell)}}</span>
+                        <material-icon *ngIf="getEvaluatedColumn(key, cell) == true"
+                                       baseline
+                                       icon="check"
+                                       size="small">
+                        </material-icon>
+                    </td>
+                    <td *ngIf="showDeleteButtons"
+                        class="text-center">
+                        <material-icon class="clickable color-alert"
+                                       icon="delete_forever"
+                                       size="x-large"
+                                       (click)="deleteBufferId = key; $event.stopPropagation()">
+                        </material-icon>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
     <div class="row expand"
          *ngIf="filteredKeys?.isEmpty == true">
         <div class="col"
