--- a/lib/components/fo_data_table/fo_data_table_component.scss
+++ b/lib/components/fo_data_table/fo_data_table_component.scss
@@ -2,10 +2,6 @@
 @import 'package:grid/theme';
 :host {
     width: 100%;
-    /*
-    material-icon {
-        vertical-align: text-top;
-    }*/
 }
 
 fieldset {
@@ -30,72 +26,73 @@ material-input {
 div.table-container {
     position: relative;
     z-index: 1;
-    min-width: 285px;
+    min-width: 245px;
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
     background-color: white;
-    table.output {
-        -webkit-transition: opacity 0.2s;
-        -moz-transition: opacity 0.2s;
-        -o-transition: opacity 0.2s;
-        transition: opacity 0.2s;
-        width: 100%;
-        border-collapse: collapse;
-        border: 2px solid #eee;
-        font-size: 0.8rem;
-        td {            
-            white-space: nowrap;
-        }
-        td:first-child {
-            padding-left: 0.5em;
-        }
-        thead {
-            tr {
-                background-color: #eee;
-                td {
-                    overflow: hidden;
-                    text-overflow: ellipsis;
-                    cursor: pointer;
-                    line-height: 1rem;
-                    height: 1rem;
-                    span {
-                        font-size: 0.9rem;
-                        font-stretch: ultra-condensed;
+    div.output-container {
+        overflow-x: auto;
+        table.output {
+            -webkit-transition: opacity 0.2s;
+            -moz-transition: opacity 0.2s;
+            -o-transition: opacity 0.2s;
+            transition: opacity 0.2s;
+            min-width: 100%;
+            border-collapse: collapse;
+            border: 2px solid #eee;
+            font-size: 0.8rem;
+            table-layout: auto;
+            td {
+                white-space: nowrap;
+            }
+            td:first-child {
+                padding-left: 0.5em;
+            }
+            thead {
+                tr {
+                    background-color: #eee;
+                    td {
+                        overflow: hidden;
+                        text-overflow: ellipsis;
+                        cursor: pointer;
+                        line-height: 1rem;
+                        height: 1rem;
+                        span {
+                            font-size: 0.9rem;
+                            font-stretch: ultra-condensed;
+                        }
+                    }
+                    td.buttonCell {
+                        width: 1rem;
                     }
                 }
-                td.buttonCell {
-                    width: 1rem;
+                border-bottom: 2px solid #ddd;
+            }
+            tbody {
+                tr {
+                    cursor: pointer;
+                    td {
+                        overflow: hidden;
+                        text-overflow: ellipsis;
+                    }
                 }
-            }
-            border-bottom: 2px solid #ddd;
-        }
-        tbody {
-            tr {
-                cursor: pointer;
-                td {
-                    overflow: hidden;
-                    text-overflow: ellipsis;
+                tr:nth-child(even) {
+                    background-color: #f5f5f5;
                 }
+                tr:nth-child(odd) {
+                    background-color: #fff;
+                }
+                tr:hover {
+                    background-color: #eee;
+                }
+                border-bottom: 1px solid #ddd;
             }
-            tr:nth-child(even) {
-                background-color: #f5f5f5;
-            }
-            tr:nth-child(odd) {
-                background-color: #fff;
-            }
-            tr:hover {
-                background-color: #eee;
-            }
-            border-bottom: 1px solid #ddd;
         }
-    }
-    table.output.fixed-layout {
-        table-layout: fixed;
     }
     #select-step {
-       // margin-top: 0.2rem;
+        // margin-top: 0.2rem;
         #rows-per-page {
             margin-top: 0.15rem;
             margin-left: 0.2rem;
