Added some padding between columns on datatable

--- a/lib/components/fo_data_table/fo_data_table_component.scss
+++ b/lib/components/fo_data_table/fo_data_table_component.scss
@@ -46,9 +46,10 @@ div.table-container {
             table-layout: auto;
             td {
                 white-space: nowrap;
+                padding-left: 0.4rem;
             }
             td:first-child {
-                padding-left: 0.5em;
+                padding-left: 0.5rem;
             }
             thead {
                 tr {
